[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metasporeflow"
version = "0.2.0"
authors = [
  { name="DMetaSoul", email="opensource@dmetasoul.com" },
]
description = "metasporeflow: MetaSpore Flow Management"
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "attrs~=22.1.0",
    "cattrs~=22.1.0",
    "PyYAML~=5.4.1",
    "networkx~=2.8.6",
    "python-consul2~=0.1.5",
    "ruamel.yaml~=0.17.21",
    "requests~=2.22.0",
    "botocore==1.24.21",
    "boto3==1.21.21",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/meta-soul/MetaSpore/tree/main/python/metasporeflow"
"Bug Tracker" = "https://github.com/meta-soul/MetaSpore/issues"

[tool.setuptools.packages.find]
where = ["python"]
include = ["metasporeflow*"]
